# Randomized-Uphill-Climbing

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
experiments/: run_ablation.py  run_convergence.py  run_main.py
ruc_ts/: __init__.py
ruc_ts/data/: __init__.py  datasets.py
ruc_ts/downstream/: __init__.py  models.py
ruc_ts/filtering/: __init__.py  overfitting_guards.py
ruc_ts/grammar/: __init__.py  expression_tree.py  operators.py
ruc_ts/scoring/: __init__.py  dual_scorer.py  mlp_surrogate.py  ols_surrogate.py
ruc_ts/search/: __init__.py  annealing.py  perturbation.py  ruc_search.py
ruc_ts/utils/: __init__.py  metrics.py
tests/: test_grammar.py  test_pipeline.py  test_scoring.py  test_search.py
