[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ruc-ts"
version = "0.1.0"
description = "RUC-TS: Randomized Uphill Climbing for Automated Feature Program Synthesis in Time-Series Forecasting"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1"]
deep = ["torch>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["ruc_ts*"]
